# Prof-Annotate

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml
assets/styles/: dark_theme.qss
bytemark/: app.py
bytemark/config/: constants.py  shortcuts.py  skeleton.py
bytemark/core/annotation/: models.py  parser.py  undo.py  writer.py
bytemark/core/dataset/: loader.py  merger.py  splitter.py  validator.py  yaml_handler.py
bytemark/core/inference/: engine.py  filter.py  postprocess.py
bytemark/core/recovery/: autosave.py
bytemark/ui/: main_window.py  prof_watcher.py  tutorial.py
bytemark/ui/dialogs/: _prof_layout.py  autoannotate_prompt.py  confirm_dialog.py  dataset_wizard.py  error_dialog.py  keybindings_dialog.py  kpt_bulk_edit_dialog.py  kpt_selection_dialog.py  modality_prompt.py  prof_dialog.py  prof_progress_dialog.py  splash_screen.py  split_prompt.py
bytemark/ui/drawing/: bbox_tool.py  keypoint_tool.py  segmentation_tool.py
bytemark/ui/overlays/: bbox_overlay.py  diff_overlay.py  keypoint_overlay.py  segmentation_overlay.py
bytemark/ui/widgets/: canvas.py  file_explorer.py  json_editor.py  modality_selector.py  prof_widget.py  stats_panel.py  status_bar.py  yaml_editor.py
bytemark/utils/: color.py  filesystem.py  image.py  logger.py  prefs.py
profannotate/: app.py
profannotate/config/: constants.py  shortcuts.py  skeleton.py
profannotate/core/annotation/: models.py  parser.py  undo.py  writer.py
profannotate/core/dataset/: loader.py  merger.py  splitter.py  validator.py  yaml_handler.py
profannotate/core/git/: reader.py
profannotate/core/inference/: engine.py  filter.py  postprocess.py  segpose_onnx.py
profannotate/core/recovery/: autosave.py
profannotate/ui/: main_window.py  prof_annotate.py  prof_watcher.py  tutorial.py
profannotate/ui/dialogs/: _prof_layout.py  autoannotate_prompt.py  confirm_dialog.py  dataset_wizard.py  error_dialog.py  keybindings_dialog.py  kpt_bulk_edit_dialog.py  kpt_selection_dialog.py  modality_prompt.py  prof_dialog.py  prof_progress_dialog.py  splash_screen.py  split_prompt.py
profannotate/utils/: color.py  filesystem.py  image.py  logger.py  prefs.py  ui_scaling.py
scripts/: _verify_labels.py  setup.sh
src/config/: constants.py  shortcuts.py
src/core/git/: reader.py
src/ui/: main_window.py  prof_annotate.py  prof_watcher.py  tutorial.py
src/utils/: color.py  filesystem.py  image.py  logger.py  prefs.py  ui_scaling.py
(+56 files in other folders)
