[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "bytemark"
version = "1.0.0"
description = "Terminal-style GUI annotation tool for YOLO training data"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6.0",
    "onnxruntime>=1.17.0",
    "numpy>=1.26.0",
    "opencv-python-headless>=4.9.0",
    "PyYAML>=6.0.1",
    "gitpython>=3.1.40",
    "Pillow>=10.2.0",
]

[project.optional-dependencies]
gpu-cuda = ["onnxruntime-gpu>=1.17.0"]
dev = ["pytest>=8.0.0", "pytest-qt>=4.3.1", "black>=24.0.0", "ruff>=0.3.0"]
build = ["pyinstaller>=6.0"]

[project.scripts]
bytemark = "bytemark.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["bytemark*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
qt_api = "pyside6"
