[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "profannotate"
version = "1.0.0"
description = "Terminal-style GUI annotation tool for YOLO training data"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6.0",
    "onnxruntime>=1.17.0",
    "numpy>=1.26.0",
    "opencv-python-headless>=4.9.0",
    "PyYAML>=6.0.1",
    "gitpython>=3.1.40",
    "Pillow>=10.2.0",
]

[project.optional-dependencies]
# GPU acceleration via onnxruntime-gpu. CUDA runtime libraries (cudnn/cublas/cudart)
# are provided by the host, not pulled in here; the app falls back to CPU if absent.
gpu-cuda12 = ["onnxruntime-gpu>=1.19,<2"]   # modern NVIDIA: CUDA 12 / cuDNN 9 (driver R525+)
gpu-cuda11 = ["onnxruntime-gpu==1.18.1"]    # legacy NVIDIA: CUDA 11.8 / cuDNN 8
gpu-cuda = ["onnxruntime-gpu>=1.19,<2"]     # alias for gpu-cuda12
dev = ["pytest>=8.0.0", "pytest-qt>=4.3.1", "black>=24.0.0", "ruff>=0.3.0"]
build = ["nuitka>=2.0", "ordered-set", "zstandard"]

[project.scripts]
profannotate = "profannotate.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["profannotate*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
qt_api = "pyside6"
